--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -100,6 +100,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 639,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_sets(data, props):\n",
+    "    if sum(props) != 1:\n",
+    "        raise ValueError(\"proportions must sum to 1\")\n",
+    "    \n",
+    "    m = data.shape[0]\n",
+    "    \n",
+    "    sets = []\n",
+    "    cursor = 0\n",
+    "    \n",
+    "    for p in props:\n",
+    "        s = data[cursor:(cursor+int(p*m)), :]\n",
+    "        sets.append(s)\n",
+    "        cursor = int(p*m)\n",
+    "    \n",
+    "    return sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 642,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss = make_sets(demo_data, [0.6, 0.2, 0.2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 643,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(600, 3), (200, 3), (200, 3)]"
+      ]
+     },
+     "execution_count": 643,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[s.shape for s in ss]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 438,
    "metadata": {},
    "outputs": [],
