--- a/net.ipynb
+++ b/net.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +90,10 @@
     "        self.add_bias = add_bias\n",
     "        self.weights = np.random.uniform(\n",
     "            -0.1, 0.1,\n",
-    "            size=(self.input_size + 1 if self.add_bias else self.input_size,\n",
-    "                  self.output_size)\n",
+    "            size=(\n",
+    "                self.output_size,\n",
+    "                self.input_size + 1 if self.add_bias else self.input_size\n",
+    "            )\n",
     "        )\n",
     "    \n",
     "\n",
@@ -99,19 +101,20 @@
     "        m = inputs.shape[0]\n",
     "        self.raw_output = np.matmul(\n",
     "            np.hstack((np.ones((m, 1)), inputs)) if self.add_bias else inputs,\n",
-    "            self.weights\n",
+    "            self.weights.T\n",
     "        )\n",
     "        self.output = self.activation_fun(self.raw_output)\n",
     "        return self.output\n",
     "    \n",
     "    \n",
-    "    def calculate_error(self, next_error):\n",
+    "    def calculate_error(self, next_error, prev_raw_output):\n",
     "        # Omit bias weights\n",
     "        self.error = np.matmul(\n",
-    "            next_error, \n",
+    "            next_error,\n",
     "            self.weights[:, 1:] if self.add_bias else self.weights\n",
-    "        ) * self.activation_deriv_fun(self.raw_output)\n",
+    "        ) * self.activation_deriv_fun(prev_raw_output)\n",
     "        return self.error\n",
+    "    \n",
     "    \n",
     "    def update_weights(self, meh):\n",
     "        pass"
@@ -119,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +140,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 422,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 10)"
+      ]
+     },
+     "execution_count": 422,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layer1.process(X)\n",
+    "layer1.raw_output.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,18 +213,26 @@
     "        preds = self.predict(data, classes=False)\n",
     "        \n",
     "        # The \"k+1st\" error actually gets stored in Input layer - all fine!\n",
-    "        self.layers[0].error = preds - np.eye(self.output_size)[:, labels].T\n",
+    "        error = preds - np.eye(self.output_size)[:, labels].T\n",
+    "        self.layers[0].error = error\n",
     "        all_grads = np.empty(0)\n",
     "        \n",
-    "        for k in range(len(self.layers)):\n",
-    "            error = self.layers[-k-1].calculate_error(self.layers[-k].error)\n",
-    "            accumulator = 1/m * np.matmul(error.T, self.layers[-k-2].output)\n",
-    "            # Compute regularisation term\n",
-    "            reg = (penalty/m) * layer.weights\n",
-    "            reg[:, 0] = 0\n",
+    "        for k in range(len(self.layers)-1):\n",
     "            \n",
-    "            grads = (accumulator + reg).flatten()\n",
-    "            all_grads = np.concatenate(all_grads, grads)\n",
+    "            # Calculate gradients using error from next layer\n",
+    "            grads = 1/m * np.matmul(\n",
+    "                np.hstack((np.ones((m, 1)), self.layers[-k-2].output)).T if self.layers[-k-1].add_bias else self.layers[-k-2].output.T,\n",
+    "                error\n",
+    "            )\n",
+    "            # Compute regularisation term\n",
+    "            reg = (penalty/m) * self.layers[-k-1].weights.T\n",
+    "            if self.layers[-k-1].add_bias:\n",
+    "                reg[:, 0] = 0\n",
+    "            \n",
+    "            all_grads = np.concatenate(((grads + reg).flatten(), all_grads))\n",
+    "            \n",
+    "            # Calculate error of next layer\n",
+    "            error = self.layers[-k-1].calculate_error(self.layers[-k].error, self.layers[-k-2].raw_output)\n",
     "        \n",
     "        return all_grads\n",
     "    "
@@ -215,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,14 +248,15 @@
     "    layers=[\n",
     "        Input(20),\n",
     "        Dense(20, 10, \"sigmoid\"),\n",
-    "        Dense(10, 4, \"softmax\")\n",
+    "        Dense(10, 10, \"sigmoid\"),\n",
+    "        Dense(10, 4, \"sigmoid\")\n",
     "    ]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +265,8 @@
      "text": [
       "Layer 0: Input, 20 -> 20, none\n",
       "Layer 1: Dense, 20 -> 10, sigmoid\n",
-      "Layer 2: Dense, 10 -> 4, softmax\n"
+      "Layer 2: Dense, 10 -> 10, sigmoid\n",
+      "Layer 3: Dense, 10 -> 4, sigmoid\n"
      ]
     }
    ],
@@ -249,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +285,7 @@
        "(1000, 4)"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,16 +296,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.30120814335824"
+       "2.7892216476151734"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 427,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,16 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(254,)"
+       "(364,)"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 428,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,68 +343,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {},
+   "execution_count": 431,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "shapes (1000,4) and (11,3) not aligned: 4 (dim 1) != 11 (dim 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-293-e5afdf59d69d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_weights_grads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-287-8f9242be6184>\u001b[0m in \u001b[0;36mget_weights_grads\u001b[1;34m(self, data, labels, penalty)\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 53\u001b[1;33m             \u001b[0merror\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalculate_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     54\u001b[0m             \u001b[0maccumulator\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mm\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m             \u001b[1;31m# Compute regularisation term\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-284-a85e34c8e811>\u001b[0m in \u001b[0;36mcalculate_error\u001b[1;34m(self, next_error)\u001b[0m\n\u001b[0;32m     25\u001b[0m         self.error = np.matmul(\n\u001b[0;32m     26\u001b[0m             \u001b[0mnext_error\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_bias\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m         ) * self.activation_deriv_fun(self.raw_output)\n\u001b[0;32m     29\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: shapes (1000,4) and (11,3) not aligned: 4 (dim 1) != 11 (dim 0)"
-     ]
+     "data": {
+      "text/plain": [
+       "(364,)"
+      ]
+     },
+     "execution_count": 431,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.get_weights_grads(X, y)"
+    "model.get_weights_grads(X, y).shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -394,6 +378,13 @@
    "source": [
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
