Add first-draft skeleton

--- a/report/report.tex
+++ b/report/report.tex
@@ -21,6 +21,45 @@
 
 
 
+\section{Introduction to Classification Problems}
+
+
+
+\section{Logistic Regression: The Artificial Neuron}
+
+    \subsection{Introducing Nonlinearity}
+
+    \subsection{The Cost Function}
+
+    \subsection{Regularisation}
+
+
+
+\section{Neural Networks}
+
+    \subsection{Multiple Outputs}
+    
+    \subsection{Forward Propagation}
+
+    \subsection{Backpropagation}
+
+
+
+
+\section{Demonstration of Methods}
+
+    \subsection{Binary Classification}
+    
+    \subsection{Multiclass Classification}
+    
+
+
+
+\section{Areas for Further Work}    
+
+
+
+
 \section*{References}
 
 	\begin{itemize}
