--- a/report/report.tex
+++ b/report/report.tex
@@ -2,6 +2,11 @@
 \usepackage{arxiv}
 
 \usepackage{amssymb, amsmath}
+\usepackage{amsthm}
+\newtheorem{lemma}{Lemma}
+\newtheorem{theorem}{Theorem}
+
+\setlength{\jot}{15pt}
 
 \usepackage{graphicx}
 \graphicspath{graphics/}
@@ -45,15 +50,15 @@
         
         
         $$ \begin{aligned}
-        J(\theta) &= - \sum_{i=1}^{n} \left( y_i \log(a^{(L)}_i) + (1 - y_i) \log(1 - a^{(L)}_i) \right) \\
+        J(\theta) &= - \sum_{k=0}^{n} \left( y_k \log(a^{(L)}_k) + (1 - y_k) \log(1 - a^{(L)}_k) \right) \\
             &= -\mathbf{y}^\top \log(\mathbf{a}^{(L)}) - (\mathbf{1}-\mathbf{y})^\top \log(\mathbf{1} - \mathbf{a}^{(L)})
         \end{aligned} $$
         
         
         
         $$
-        \frac{\partial J(\theta)}{\partial \theta^{(L-1)}} =
-            \frac{\partial J(\theta)}{\partial \mathbf{a}^{(L)}} \
+        \frac{\partial J}{\partial \theta^{(L-1)}} =
+            \frac{\partial J}{\partial \mathbf{a}^{(L)}} \
             \frac{\partial \mathbf{a}^{(L)}}{\partial \mathbf{z}^{(L)}} \
             \frac{\partial \mathbf{z}^{(L)}}{\partial \theta^{(L-1)}}
         $$
@@ -61,8 +66,8 @@
 
 
         $$
-        \frac{\partial J(\theta)}{\partial \theta^{(L-2)}} =
-            \frac{\partial J(\theta)}{\partial \mathbf{a}^{(L)}} \
+        \frac{\partial J}{\partial \theta^{(L-2)}} =
+            \frac{\partial J}{\partial \mathbf{a}^{(L)}} \
             \frac{\partial \mathbf{a}^{(L)}}{\partial \mathbf{z}^{(L)}} \
             \frac{\partial \mathbf{z}^{(L)}}{\partial \mathbf{a}^{(L-1)}} \
             \frac{\partial \mathbf{a}^{(L-1)}}{\partial \mathbf{z}^{(L-1)}} \
@@ -71,12 +76,115 @@
 
 
 
+    Where we define the "error" of layer $l$ as
+    
         $$
-        \delta^{(L)} :=
-            \frac{\partial J(\theta)}{\partial \mathbf{a}^{(L)}} \
-            \frac{\partial \mathbf{a}^{(L)}}{\partial \mathbf{z}^{(L)}} \
+        \mathbf{\delta}^{(L)} :=  \frac{\partial J}{\partial \mathbf{z}^{(l)}} \in \mathbb{R}^{n_l}
         $$
         
+        The $j$th component of this error vector is a measure of the sensitivity of the cost function $J(\theta)$ to the (weighted) input from neuron $j$ in layer $l$. Although it is \textit{not} a direct measure of how much a particular neuron is at fault for mistakes in the network's eventual output, such an explanation is at least valid intuitively, since all partial derivatives must be zero if the cost function is at a minimum.
+        
+        Note that when $J(\theta)$ is the cross entropy cost function, the error in the final layer $L$ can be calculated as follows:
+        
+        \begin{lemma}
+            If $\mathbf{a}^{(L)} = \sigma(\mathbf{z}^{(L)})$ is the activated output of the final layer $L$ of the network, where $\sigma$ is either the sigmoid or softmax activation function, then
+            
+            $$
+            \mathbf{\delta}^{(L)} = \left( \mathbf{a}^{(L)} \right)^\top \left( \mathbf{1} - \mathbf{a}^{(L)} \right)$$
+            
+            where $\mathbf{1} = (1, ..., 1)^\top \in \mathbb{R}^{n_{L}}$.
+        \end{lemma}
+        
+        
+        \begin{proof}
+            
+            Firstly, where $\mathbf{y}$ is the expected output of the network, observe that the partial derivative of $J$ with respect to the $j$th component of the activated output $\mathbf{a}^{(L)}$ can be represented as
+                    
+            $$ \begin{aligned}
+            \frac{\partial J(\theta)}{\partial a^{(L)}_j}
+            &= \frac{\partial}{\partial a^{(L)}_i} \left( - \sum_{k=0}^{n_L} \left( y_k \log(a^{(L)}_k) + (1 - y_k) \log(1 - a^{(L)}_k) \right) \right) \\
+            &= - \frac{y_j}{a^{(L)}_j} + \frac{1 - y_j}{1 - a^{(L)}_j}
+            \end{aligned} $$
+            
+            Consider now the partial derivative of the activated output of layer $L$, with respect to the non-activated output; that is,
+            
+            $$
+            \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j} = \frac{\partial}{\partial z^{(L)}_j} \left( \sigma(z^{(L)}_j) \right)
+            $$
+            
+             
+            \begin{itemize}
+                
+                \item When $\sigma$ is the sigmoid activation function,
+            
+                $$
+                \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j} = \frac{\partial}{\partial z^{(L)}_j} \left( \frac{1}{1 + e^{-z^{(L)}_i}} \right)
+                $$
+                
+                Note that if $i \neq j$ then this is clearly zero. If $i = j$,
+                
+                $$ \begin{aligned}
+                \frac{\partial a^{(L)}_i}{\partial z^{(L)}_i}
+                &= \left( - e^{-z^{(L)}_i} \right) \left( - \left( 1 + e^{-z^{(L)}_i} \right)^{-2} \right) \\
+                &= \frac{e^{-z^{(L)}_i}}{\left( 1 + e^{-z^{(L)}_i} \right) \left( 1 + e^{-z^{(L)}_i} \right)} \\
+                &= \left( \frac{1}{1 + e^{-z^{(L)}_i}} \right) \left( \frac{\left( 1 + e^{-z^{(L)}_i} \right) - 1}{1 + e^{-z^{(L)}_i}} \right) \\
+                &= \sigma(z^{(L)}_i) \left( 1 - \sigma(z^{(L)}_i) \right)
+                \end{aligned} $$
+                
+            
+            
+                \item When $\sigma$ is the softmax activation function, then using the quotient rule,
+                
+                $$ \begin{aligned}
+                \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j}
+                &= \frac{\partial}{\partial z^{(L)}_j} \left( \frac{e^{z^{(L)}_i}}{\sum_{k=0}^{n_L} e^{z^{(L)}_k}} \right) \\
+                &= \frac{\left( \frac{\partial \left( e^{z^{(L)}_i}\right)}{\partial z^{(L)}_j} \cdot \sum_{k=0}^{n_L} e^{z^{(L)}_k} \right) - e^{z^{(L)}_i} e^{z^{(L)}_j}}{\left( \sum_{k=0}^{n_L} e^{z^{(L)}_k} \right)^2}
+                \end{aligned} $$
+                
+                
+                If $i \neq j$,
+               
+                $$ \begin{aligned}
+                \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j}
+                &= \frac{0 - e^{z_i} e^{z_j}}{\left( \sum_{k=0}^{n_L} e^{z^{(L)}_k} \right)^2} \\
+                &= - \sigma(z_i) \sigma(z_j)
+                \end{aligned} $$
+                
+                On the other hand, if $i = j$,
+                
+                $$ \begin{aligned}
+                \frac{\partial a^{(L)}_i}{\partial z^{(L)}_i}
+                &= \frac{\left( e^{z^{(L)}_i} \cdot \sum_{k=0}^{n_L} e^{z^{(L)}_k} \right) - \left( e^{z^{(L)}_i} \right)^2}{\left( \sum_{k=0}^{n_L} e^{z^{(L)}_k} \right)^2} \\
+                &= \frac{e^{z^{(L)}_i}}{\sum_{k=0}^{n_L} e^{z^{(L)}_k}} \left( 1 - \frac{e^{z^{(L)}_i}}{\sum_{k=0}^{n_L} e^{z^{(L)}_k}} \right) \\
+                &= \sigma(z^{(L)}_i) \left( 1 - \sigma(z^{(L)}_i) \right)
+                \end{aligned} $$
+                
+            \end{itemize}
+            
+            Therefore in both cases, THIS.
+            
+            Next:
+            
+            $$
+            \delta^{(L)} =
+            \frac{\partial J(\theta)}{\partial \mathbf{z}^{(L)}} =
+            \frac{\partial J(\theta)}{\partial \mathbf{a}^{(L)}} \ \frac{\partial \mathbf{a}^{(L)}}{\partial \mathbf{z}^{(L)}}
+            $$
+            
+    
+    
+    
+        \end{proof}
+
+
+        
+        
+        $$
+        \delta^{(l)} :=
+        \delta^{(l+1)} \
+        \frac{\partial \mathbf{z}^{(l+1)}}{\partial \mathbf{a}^{(l)}} \
+        \frac{\partial \mathbf{a}^{(l)}}{\partial \mathbf{z}^{(l)}} \
+        $$
         
         
         
@@ -90,23 +198,11 @@
         
         
         
-        $$ \begin{aligned}
-        \frac{\partial J(\theta)}{\partial \mathbf{a}^{(L)}}
-            &= \frac{\partial}{\partial \mathbf{a}^{(L)}}
-               \left( -\mathbf{y} \log(\mathbf{a}^{(L)}) - (1-\mathbf{y}) \log(1 - \mathbf{a}^{(L)}) \right) \\
-            &= \frac{-\mathbf{y}}{\mathbf{a}^{(L)}} - \frac{1 - \mathbf{y}}{1 - \mathbf{a}^{(L)}}
-        \end{aligned} $$
+        
         
 
 
-        $$ \begin{aligned}
-        \frac{\partial \mathbf{a}^{(L)}}{\partial \mathbf{z}^{(L)}}
-            &= \frac{\partial}{\partial \mathbf{a}^{(L)}} \left( \frac{1}{\mathbf{1} + e^{-\mathbf{z}^{(L)}}} \right) \\
-            &= \left( - e^{-\mathbf{z}^{(L)}} \right) \left( - \left( \mathbf{1} + e^{-\mathbf{z}^{(L)}} \right)^{-2} \right) \\
-            &= \frac{e^{-\mathbf{z}^{(L)}}}{\left( \mathbf{1} + e^{-\mathbf{z}^{(L)}} \right) \left( \mathbf{1} + e^{-\mathbf{z}^{(L)}} \right)} \\
-            &= \left( \frac{1}{\mathbf{1} + e^{-\mathbf{z}^{(L)}}} \right)^\top \left( \frac{\left( \mathbf{1} + e^{-\mathbf{z}^{(L)}} \right) - \mathbf{1}}{\mathbf{1} + e^{-\mathbf{z}^{(L)}}} \right)
-            &= \left( \mathbf{a}^{(L)} \right)^\top \left( \mathbf{1} - \mathbf{a}^{(L)} \right)
-        \end{aligned} $$
+
 
 
 
