--- a/report/arxiv.sty
+++ b/report/arxiv.sty
@@ -217,7 +217,7 @@
     \centering
     {\LARGE\sc \@title\par}
     \@bottomtitlebar
-    \textsc{A Preprint}\\
+    %\textsc{A Preprint}\\
     \vskip 0.1in
     \def\And{%
       \end{tabular}\hfil\linebreak[0]\hfil%
